# nebula

./: CMakeLists.txt  README.md
inc/: camera_interface.hpp  democlass.hpp  main.hpp  myclass.hpp  myclass2.hpp  nebula.yml
inc/cameras/: FLIRBlackflyS.hpp  flir_blackfly_s.hpp
src/: main.cpp
src/cameras/: FLIRBlackflyS.cpp  flir_blackfly_s.cpp
tools/: generate_stubs.py  yml2cpp.py
